Ajout version mobile

--- a/booki-starter-code/index.html
+++ b/booki-starter-code/index.html
@@ -21,8 +21,8 @@
             <nav class="header-navbar">
                 <img src="./images/logo/Booki.png" class="header-navbar_logo" alt="Logo du site Booki">
                 <ul class="header-navbar_links">
-                    <li><a href="#hebergements">Hébergement</a></li>
-                    <li><a href="#activites">Activités</a></li>
+                    <li><a href="#hebergements" class="header-navbar_hebergement">Hébergement</a></li>
+                    <li><a href="#activites" class="header-navbar_activites">Activités</a></li>
                 </ul>
             </nav>
 
@@ -32,8 +32,8 @@
             <form method="get" class="header-form">
                 <i class="fa-solid fa-location-dot"></i>
                 <input type="text" id="search" name="search" class="header-form_input" placeholder="Marseille, France">
-                <label for="search" class="header-form_label">Rechercher<i
-                        class="fa-solid fa-magnifying-glass"></i></label>
+                <label for="search" class="header-form_label">Rechercher</label>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </form>
 
             <ul class="header-filtres">
